# mcps

./: .build.yml  Cargo.toml  README.md  TODO.md  deny.toml  example.json  example.yaml
assets/: project.json  project.yaml  schedule.json  schedule.yaml
src/: lib.rs  main.rs  schedule.rs  schedule_loader.rs  simulation.rs  task.rs
tests/: effort_is_correct.rs  invalid_schedules.rs  no_dependencies_schedule.rs  simulation_tests.rs
