[package]
name = "mcps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mcps"
path = "src/lib.rs"

[[bin]]
name = "mcps"
path = "src/main.rs"

[dependencies]
clap = "4.5.15"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.12.0"
