[package]
name = "mcps"
version = "0.2.1"
authors = ["Stephen Waits <steve@waits.net>"]
edition = "2021"
description = "A command-line tool for running Monte Carlo simulations on project schedules."
license = "MIT"
readme = "README.md"
repository = "https://github.com/swaits/mcps"
homepage = "https://github.com/swaits/mcps"
keywords = ["monte", "carlo", "project", "schedules", "estimation"]
categories = ["command-line-utilities", "development-tools", "simulation"]
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mcps"
path = "src/lib.rs"

[[bin]]
name = "mcps"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clap = "4.5.15"
distimate = "0.2.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
serde_yaml = "0.9.34"
workdays = "0.1.0"

[dev-dependencies]
tempfile = "3.12.0"
